--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">CYBER<span>SEC</span></div>
+                <div class="logo">PORTfolio<span>SEC</span></div>
                 <ul class="nav-links" id="nav-links" >
                     <li><a href="#hero">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -445,7 +445,7 @@ These flaws are dangerous because stolen credentials or modified files let attac
                         </div>
                         <div class="contact-text">
                             <h3>Email</h3>
-                            <a href="mailto:ymnyqr72@gmail.com">ymnyqr72@gmail.com</a>
+                            <a href="mailto:kareemyassermah@gmail.com">kareemyassermah@gmail.com</a>
                             <p>PGP Key Available</p>
                         </div>
                     </div>
@@ -455,7 +455,7 @@ These flaws are dangerous because stolen credentials or modified files let attac
                         </div>
                         <div class="contact-text">
                             <h3>Phone</h3>
-                            <p>+20 01158588171</p>
+                            <p>+20 1149257666</p>
                             <p>Encrypted Calls Available</p>
                         </div>
                     </div>
@@ -465,7 +465,7 @@ These flaws are dangerous because stolen credentials or modified files let attac
                         </div>
                         <div class="contact-text">
                             <h3>Location</h3>
-                            <p>Sohag-Akhmim Elsherkawy Street, CA</p>
+                            <p>Alexandria,Egypt</p>
                             <p>Remote Work Available</p>
                         </div>
                     </div>
