--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">PORTfolio<span>SEC</span></div>
+                <div class="logo">PORT<span>folio</span></div>
                 <ul class="nav-links" id="nav-links" >
                     <li><a href="#hero">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -38,10 +38,10 @@
             <div class="hero-grid">
                 <div class="hero-content">
                     <h1 class="glitch" data-text="CYBERSECURITY EXPERT">CYBERSECURITY EXPERT</h1>
-                    <p>Securing digital worlds with ethical hacking, penetration testing, and threat analysis. Specializing in identifying vulnerabilities before they become threats.</p>
+                    <p>Securing digital worlds with ethical hacking, penetration testing, and vulnerability assessment. Turning weaknesses into strengths before attackers can exploit them.</p>
                     <div class="stats-grid">
                         <div class="stat-box">
-                            <div class="stat-value" id="counter1" data-target="2656">0</div>
+                            <div class="stat-value" id="counter1" data-target="1500">0</div>
                             <div class="stat-label">linkedin followers</div>
                         </div>
                         <div class="stat-box">
@@ -65,14 +65,14 @@
                             <div class="dot dot-yellow"></div>
                             <div class="dot dot-green"></div>
                         </div>
-                        <div class="terminal-title">root@cybersec:~</div>
+                        <div class="terminal-title">root@kareemomran:~</div>
                     </div>
                     <div class="terminal-content">
                         <p><span class="command">$ whoami</span><br>Kareem Yasser Mahmoud <br> Penetration tester & Bug Hunter </p>
-                        <p><span class="command">$ skills</span><br>Ehtical Hacking  · Web Security  · Malware Analysis · Pentration Testing  ·Vulnerability Assessment · Network Security · Programming  </p>
-                        <p><span class="command">$ Soft skills</span><br>Time Management  · Communication · Leadership  · TOT · Teamwork  ·Self_Learning  · Problem Solving · Attention in detail </p>
-                        <p><span class="command">$ cat certifications.txt</span><br>CCNA · Linux · HTML · CSS · Javascript · Database · Security+</p>
-                        <p><span class="command">$ run --mission</span><br>> Protecting digital infrastructure<br>> Securing sensitive data<br>> Ethical hacking for security</p>
+                        <p><span class="command">$ skills.exe</span><br>Ehtical Hacking  · Web Security  · Network Security  · Pentration Testing  · Vulnerability Assessment  · Malware Analysis  · Programming  </p>
+                        <p><span class="command">$ Soft --skills</span><br>Risk Assessment · Communication · Adaptability · Leadership · Presentation · Teamwork · Self_Learning · Problem Solving · Resilience </p>
+                        <p><span class="command">$ cat certifications.txt</span><br>Security+ · CCNA · PenTest+ · EJPT </p>
+                        <p><span class="command">$ run --mission</span><br>> Securing modern web applications<br>> Protecting privacy and sensitive data<br>> Ethical hacking to prevent breaches</p>
                         <p><span class="command">$ </span><span class="cursor"></span></p>
                     </div>
                 </div>
