--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                 <div>
                     <h3 style="padding-bottom: 20px;">Penetration Tester | Bug Hunter</h3>
                     
-                    <p>I am a Pentester specialized in Web and Network security, dedicated to helping organizations and individuals build safer digital environments. With a strong foundation in ethical hacking and vulnerability assessment, I focus on uncovering and mitigating weaknesses before attackers can exploit them.</p>
-                    <p>I actively participate in Capture the Flag (CTF) competitions to sharpen my real-world skills in penetration testing, web security, and vulnerability discovery. These events allow me to practice offensive security techniques in a legal, ethical environment — testing everything from cryptography and reverse engineering to network exploitation.</p>
-                    <p>I continuously invest time in learning, researching, and experimenting with tools and techniques to stay ahead of attackers. My studies and hands-on projects help me approach cybersecurity challenges with creativity, discipline, and a focus on practical solutions that make technology safer for everyone.</p>
+                    <p><span class="command">$ </span>I am a Pentester specialized in Web and Network security, dedicated to helping organizations and individuals build safer digital environments. With a strong foundation in ethical hacking and vulnerability assessment, I focus on uncovering and mitigating weaknesses before attackers can exploit them.</p>
+                    <p><span class="command">$ </span>I actively participate in Capture the Flag (CTF) competitions to sharpen my real-world skills in penetration testing, web security, and vulnerability discovery. These events allow me to practice offensive security techniques in a legal, ethical environment — testing everything from cryptography and reverse engineering to network exploitation.</p>
+                    <p><span class="command">$ </span>I continuously invest time in learning, researching, and experimenting with tools and techniques to stay ahead of attackers. My studies and hands-on projects help me approach cybersecurity challenges with creativity, discipline, and a focus on practical solutions that make technology safer for everyone.</p>
                     <div class="skills-grid">
                         <div class="skill-item">
                             <div class="skill-name">
@@ -144,12 +144,12 @@
                             <p>I perform in-depth testing of web applications following the OWASP Top 10 security risks — identifying issues to prevent potential exploitation.</p>
                         </div>
                         <div class="cert-card">
-                            <h4>Vulnerability Assessment & Risk Reporting</h4>
+                            <h4>Vulnerability Assessment & Reporting</h4>
                             <p>Conduct vulnerability assessments with clear risk prioritization, providing clients with concise reports and practical security recommendations.</p>
                         </div>
                         <div class="cert-card">
                             <h4>Network Security Assessment</h4>
-                            <p>I evaluate internal and external networks to uncover misconfigurations and weaknesses, helping organizations strengthen their firewalls, servers, and infrastructure.</p>
+                            <p>I evaluate  networks to uncover misconfigurations and weaknesses, helping organizations strengthen their firewalls, servers, and infrastructure.</p>
                         </div>
                     </div>
                     
