--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
                     
                     <h3 style="margin: 30px 0;">Education</h3>
                     <div class="cert-card">
-                        <h4> Egyptian E-Learning University (EELU) </h4>
-                        <p>I'm Youmna Ramadan Mahmoud, a fourth-year student at the Faculty of Computers and Information Technology, specializing in the Information Technology department. Throughout my academic journey, I have gained comprehensive knowledge and practical skills in various fields such as programming, network management, cybersecurity, database administration, and system analysis.</p>
-                        <p>My studies have equipped me to manage and secure technological infrastructure, provide user support, and contribute to technological innovation within organizations. I am passionate about learning the latest advances in cloud computing, artificial intelligence, and data analytics to keep pace with the continuous changes in this field.</p>
+                        <h4> Faculty of Science (SIM Department) </h4>
+                        <p>I'm Kareem Yasser Mahmoud, Completed my degree at SIM in 2025 with Merit, reflecting strong academic achievement. Although my academic department was not directly specialized in cybersecurity, my passion for digital security drove me to independently study and develop expertise in the field. During my degree, I built a strong foundation in networking, systems, and IT fundamentals while simultaneously expanding into ethical hacking, penetration testing, and vulnerability assessment.</p>
+                        <p>I learned from global resources, online labs, and hands-on challenges, and participated in Capture the Flag (CTF) competitions to apply my knowledge in real-world scenarios. This combination of formal education and self-driven learning enabled me to develop a solid understanding of web and network security, ethical hacking methodologies, and proactive threat mitigation. I continue to pursue new learning opportunities to stay current with evolving cybersecurity trends and technologies.</p>
                     </div>
                     <!-- <div class="cert-card">
                         <h4>Web Design</h4>
