--- a/index.html
+++ b/index.html
@@ -519,16 +519,16 @@ These flaws are dangerous because stolen credentials or modified files let attac
                 <div class="logo">CYBER<span>SEC</span></div>
                 <div class="social-links">
                         <!-- Social Media Links -->
-                        <a href="https://www.facebook.com/share/1AojRHv7kC/" class="social-link" target="_blank">
+                       <!--  <a href="https://www.facebook.com" class="social-link" target="_blank">
                         <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="https://www.linkedin.com/in/youmna-ramadan-557432321?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-link" target="_blank">
+                        </a> -->
+                        <a href="http://linkedin.com/in/kareem-omran?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-link" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                         </a>
                         <!-- <a href="https://www.instagram.com/" class="social-link" target="_blank">
                         <i class="fab fa-instagram"></i>
-                        </a> -->
-                        <a href="https://wa.me/2001158588171" class="social-link" target="_blank">
+                        </a>-->
+                        <a href="https://wa.me/201149257666" class="social-link" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                         </a>
                 </div>
