--- a/index.html
+++ b/index.html
@@ -482,8 +482,8 @@ These flaws are dangerous because stolen credentials or modified files let attac
                 </div>
 
 
-                <div class="contact-form" action="https://formspree.io/f/xvgbjvoo" method="POST">
-                    <form>
+                <div class="contact-form" >
+                    <form action="https://formspree.io/f/xvgbjvoo" method="POST">
                         <div class="form-group">
                             <label for="name">Name</label>
                             <input id="name" name="name" required />
@@ -494,14 +494,14 @@ These flaws are dangerous because stolen credentials or modified files let attac
                         </div>
                         <div class="form-group">
                             <label for="subject">Subject</label>
-                            <input type="text" id="subject" required>
+                            <input type="text" id="subject" name="subject" required>
                         </div>
                         <div class="form-group">
                             <label for="message">Message</label>
                             <textarea id="message" name="message" rows="5" required></textarea>
                         </div>
                         <div class="form-group">
-                            <input type="checkbox" id="encrypt">
+                            <input type="checkbox" id="encrypt" name="encrypt">
                             <label for="encrypt">Encrypt message with PGP</label>
                         </div>
                     
@@ -517,13 +517,13 @@ These flaws are dangerous because stolen credentials or modified files let attac
     <footer>
         <div class="container">
             <div class="footer-content">
-                <div class="logo">CYBER<span>SEC</span></div>
+                <div class="logo">PORT<span>folio</span></div>
                 <div class="social-links">
                         <!-- Social Media Links -->
                        <!--  <a href="https://www.facebook.com" class="social-link" target="_blank">
                         <i class="fab fa-facebook-f"></i>
                         </a> -->
-                        <a href="http://linkedin.com/in/kareem-omran?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-link" target="_blank">
+                        <a href="https://linkedin.com/in/kareem-omran" class="social-link" target="_blank" rel="noopener noreferrer">               
                         <i class="fab fa-linkedin-in"></i>
                         </a>
                         <!-- <a href="https://www.instagram.com/" class="social-link" target="_blank">
