--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ These flaws are dangerous because stolen credentials or modified files let attac
                             <input type="checkbox" id="encrypt" name="encrypt">
                             <label for="encrypt">Encrypt message with PGP</label>
                         </div>
-                    
+                        <input type="hidden" name="_next" value="https://kareem-omran02.github.io#contact">
                         <button type="submit" class="btn">Send Securely</button>
                     </form>
                 </div>
