--- a/index.html
+++ b/index.html
@@ -193,15 +193,19 @@
                 </div>
 
                 <div class="project-card">
-                    <div class="project-img"><img src="./arcX Certificate.jpg" alt=""></div>
+                    <div class="project-img"><img src="./sec.jpg" alt="Security+ certification image"></div>
                     <div class="project-content">
-                        <h3>Cyber Threat Intelligence 101</h3>
+                        <h3>Security+</h3>
                         <!-- <p>A course covering the basics of computer networks, including protocols, topologies, and data transmission principles</p> -->
                         <div class="project-tags">
-                            <span class="project-tag"> Threat Intelligence Fundamentals</span>
-                            <span class="project-tag">Threat Actor Identification, IoC (Indicators of Compromise) Analysis</span>
-                            <span class="project-tag">Threat Intelligence Reporting.</span>
-                        </div>
+                                <span class="project-tag">Network Security & Secure Protocols</span>
+                                <span class="project-tag">Identity & Access Management</span>
+                                <span class="project-tag">Risk Management & Incident Response</span>
+                                <span class="project-tag">Cryptography & PKI</span>
+                                <span class="project-tag">Threats, Attacks & Vulnerabilities</span>
+                                <span class="project-tag">Security Operations & Monitoring</span>
+                                <span class="project-tag">Governance, Risk & Compliance</span>
+                         </div>
                         <!-- <button class="btn">View Report</button> -->
                     </div>
                 </div>
