--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </div>
 
                 <div class="project-card">
-                    <div class="project-img"><img src="./sec.jpg" alt="Security+ certification image"></div>
+                    <div class="project-img"><img src="./sec+.jpg" alt=""></div>
                     <div class="project-content">
                         <h3>Security+</h3>
                         <!-- <p>A course covering the basics of computer networks, including protocols, topologies, and data transmission principles</p> -->
