--- a/index.html
+++ b/index.html
@@ -179,32 +179,35 @@
             <div class="projects-grid">
 
                 <div class="project-card">
-                    <div class="project-img"><img src="./almentor.jpg" alt=""></div>
+                    <div class="project-img"><img src="./hackerverse.jpg" alt=""></div>
                     <div class="project-content">
-                        <h3>Cybersecurity and Cybercrime</h3>
+                        <h3>EC-council Hackerverse</h3>
                         <!-- <p>A course covering the basics of computer networks, including protocols, topologies, and data transmission principles</p> -->
                         <div class="project-tags">
-                            <span class="project-tag"> Cybersecurity Fundamentals</span>
-                            <span class="project-tag">Cybercrime Awareness  , Risk & Threat Analysis </span>
-                            <span class="project-tag">Security Practices & Incident Response .</span>
+                            <span class="project-tag">Open Source Intelligence (OSINT)</span>
+                            <span class="project-tag">Steganography & Data Concealment</span>
+                            <span class="project-tag">Cryptanalysis & Decryption Challenges</span>
+                            <span class="project-tag">Covert Channels & Hidden Data Discovery</span>
+                            <span class="project-tag">Adversary Reconnaissance & Profiling</span>
+
                         </div>
                         <!-- <button class="btn">View Report</button> -->
                     </div>
                 </div>
 
                 <div class="project-card">
-                    <div class="project-img"><img src="./sec+.jpg" alt=""></div>
+                    <div class="project-img"><img src="./makatob JCA.jpg" alt=""></div>
                     <div class="project-content">
-                        <h3>Security+</h3>
+                        <h3>Cisco-jounior security analyst</h3>
                         <!-- <p>A course covering the basics of computer networks, including protocols, topologies, and data transmission principles</p> -->
                         <div class="project-tags">
-                                <span class="project-tag">Network Security & Secure Protocols</span>
-                                <span class="project-tag">Identity & Access Management</span>
-                                <span class="project-tag">Risk Management & Incident Response</span>
-                                <span class="project-tag">Cryptography & PKI</span>
-                                <span class="project-tag">Threats, Attacks & Vulnerabilities</span>
-                                <span class="project-tag">Security Operations & Monitoring</span>
-                                <span class="project-tag">Governance, Risk & Compliance</span>
+                                <span class="project-tag">Penetration Testing & Exploitation</span>
+                                <span class="project-tag">Network & System Vulnerability Assessment</span>
+                                <span class="project-tag">Threat Emulation & Attack Simulation</span>
+                                <span class="project-tag">Social Engineering & Physical Security Testing</span>
+                                <span class="project-tag">Red Team Operations & Adversary Tactics</span>
+                                <span class="project-tag">Privilege Escalation & Lateral Movement</span>
+
                          </div>
                         <!-- <button class="btn">View Report</button> -->
                     </div>
@@ -212,14 +215,18 @@
 
 
                 <div class="project-card">
-                    <div class="project-img"><img src="./cisco.jpg" alt=""></div>
+                    <div class="project-img"><img src="./sec+.jpg" alt=""></div>
                     <div class="project-content">
-                        <h3>CCNA : Switching, Routing, and Wireless Essentials</h3>
+                        <h3>Netriders-Security+</h3>
                         <!-- <p>A course covering the basics of computer networks, including protocols, topologies, and data transmission principles</p> -->
                         <div class="project-tags">
-                            <span class="project-tag"> Routing & Switching Configuration</span>
-                            <span class="project-tag">Network Troubleshooting, LAN/WAN, Wireless Networking Essentials</span>
-                            <span class="project-tag">IPv4/IPv6 Addressing</span>
+                            <span class="project-tag">Network Security & Secure Protocols</span>
+                            <span class="project-tag">Identity & Access Management</span>
+                            <span class="project-tag">Risk Management & Incident Response</span>
+                            <span class="project-tag">Cryptography & PKI</span>
+                            <span class="project-tag">Threats, Attacks & Vulnerabilities</span>
+                            <span class="project-tag">Security Operations & Monitoring</span>
+                            <span class="project-tag">Governance, Risk & Compliance</span>
                         </div>
                         <!-- <button class="btn">View Report</button> -->
                     </div>
@@ -242,12 +249,14 @@
 
 
                 <div class="project-card">
-                    <div class="project-img"><img src="./GDG-Certificate-GDG-CIC-CS-2025-QEDAJ.png" alt=""></div>
+                    <div class="project-img"><img src="./gdg.jpg" alt=""></div>
                     <div class="project-content">
-                        <h3>GDG- Campus Canadian International  College</h3>
+                        <h3>Google-Developers-Group on campus </h3>
                         <!-- <p>A course covering the basics of computer networks, including protocols, topologies, and data transmission principles</p> -->
                         <div class="project-tags">
                             <span class="project-tag"> Information Gathering</span>
+                            <span class="project-tag">Web Application Penetration Testing</span>
+                            <span class="project-tag">OWASP Top 10 Vulnerabilities</span>
                             <span class="project-tag">Vulnerability Assessment, Exploitation</span>
                             <span class="project-tag">Reporting.</span>
                         </div>
