--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                 <h3 style="color:#0ff; margin-bottom:15px;">File  Path Traversal</h3>
                 <p style="font-size:0.95rem; color:#ddd; margin-bottom:20px;">Traversal (directory) vulnerabilities let an attacker read or write arbitrary files on the application server — application code, data, credentials, and OS files — potentially leading to full system compromise.
 These flaws are dangerous because stolen credentials or modified files let attackers escalate privileges, maintain access, and move laterally within the network.</p>
-                <a href="/LFI Tasks.pdf" target="_blank" 
+                <a href="/msf_Task.pdf" target="_blank" 
                    style="display:inline-block; padding:10px 20px; background:#0ff; color:#000; border-radius:30px; text-decoration:none; font-weight:bold;">
                    📄 View PDF
                 </a>
@@ -420,7 +420,7 @@ These flaws are dangerous because stolen credentials or modified files let attac
                  style="background:rgba(255,255,255,0.05); border:1px solid #0ff; border-radius:15px; padding:20px; text-align:center; transition:0.3s;">
                 <h3 style="color:#0ff; margin-bottom:15px;">Authentication</h3>
                 <p style="font-size:0.95rem; color:#ddd; margin-bottom:20px;">Authentication is the process of verifying and validating a user’s identity by confirming one or more distinct factors: something they know, such as a password or PIN; something they have, like a phone, smart card, or hardware token; or something inherent, including unique biometrics or behavioral traits, ensuring secure and authorized access</p>
-                <a href="/Authentication Task.pdf" target="_blank" 
+                <a href="/msf_Task.pdf" target="_blank" 
                    style="display:inline-block; padding:10px 20px; background:#0ff; color:#000; border-radius:30px; text-decoration:none; font-weight:bold;">
                    📄 View PDF
                 </a>
@@ -431,7 +431,7 @@ These flaws are dangerous because stolen credentials or modified files let attac
                  style="background:rgba(255,255,255,0.05); border:1px solid #0ff; border-radius:15px; padding:20px; text-align:center; transition:0.3s;">
                 <h3 style="color:#0ff; margin-bottom:15px;">Gathering Information,exploit Vulnerability</h3>
                 <p style="font-size:0.95rem; color:#ddd; margin-bottom:20px;">I learned penetration testing during the Blue Project, using tools like Metasploit, Nmap, Burp Suite, and Wireshark to identify vulnerabilities, responsibly exploit them in a controlled lab, gain administrator access for testing purposes only, document findings, implement mitigations, and produce a clear, authorized report emphasizing ethics, legal compliance, scope, and remediation steps.</p>
-                <a href="/Blue Lab Try hack me.pdf" target="_blank" 
+                <a href="/msf_Task.pdf" target="_blank" 
                    style="display:inline-block; padding:10px 20px; background:#0ff; color:#000; border-radius:30px; text-decoration:none; font-weight:bold;">
                    📄 View PDF
                 </a>
