--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
 
                 <div class="project-card">
-                    <div class="project-img"><img src="./sprint.jpg" alt=""></div>
+                    <div class="project-img"><img src="./sprintXmicro_page-0001.jpg" alt=""></div>
                     <div class="project-content">
                         <h3>Sprint x Microsoft Summer Camp - Cybersecurity</h3>
                         <!-- <p>A course covering the basics of computer networks, including protocols, topologies, and data transmission principles</p> -->
