--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-img"><img src="./cyber.jpg" alt=""></div>
+                    <div class="project-img"><img src="./mahara.jpg" alt=""></div>
                     <div class="project-content">
                         <h3>Cybersecurity For All</h3>
                         <!-- <p> An introductory course on cybersecurity concepts, threats, and best practices for protecting digital assets. </p> -->
