--- a/index.html
+++ b/index.html
@@ -283,19 +283,19 @@
                 <!-- --------------------------------------------- -->
 
 
-
+ <!--
                 <div class="project-card">
                     <div class="project-img"><img src="./cnf.jpg" alt=""></div>
                     <div class="project-content">
                         <h3>Computer Network Fundamentals</h3>
                         <!-- <p>A course covering the basics of computer networks, including protocols, topologies, and data transmission principles</p> -->
-                        <div class="project-tags">
+ <!--                        <div class="project-tags">
                             <span class="project-tag"> Network architecture</span>
                             <span class="project-tag">TCP/IP, LAN/WAN</span>
                             <span class="project-tag">routing, switching and troubleshooting.</span>
                         </div>
                         <!-- <button class="btn">View Report</button> -->
-                    </div>
+    <!--                 </div>
                 </div>
 
                 <div class="project-card">
@@ -303,14 +303,14 @@
                     <div class="project-content">
                         <h3>Ethical Hacking</h3>
                         <!-- <p>Training on penetration testing, vulnerability assessment, and defensive techniques to secure systems ethically.</p> -->
-                        <div class="project-tags">
+     <!--                    <div class="project-tags">
                             <span class="project-tag">Web Security</span>
                             <span class="project-tag"> penetration testing</span>
                             <span class="project-tag">vulnerability analysis</span>
                         </div>
                         <!-- <button class="btn">View Case Study</button> -->
-                    </div>
-                </div>
+      <!--               </div>
+                </div>-->
                 <div class="project-card">
                     <div class="project-img"><img src="./mahara.jpg" alt=""></div>
                     <div class="project-content">
@@ -325,20 +325,20 @@
                     </div>
                 </div>
 
-                <div class="project-card">
+ <!--                <div class="project-card">
                     <div class="project-img"><img src="./mico.jpg" alt=""></div>
                     <div class="project-content">
                         <h3>Microsoft Student SOC Program Foundations</h3>
                         <!-- <p>Foundational training for Security Operations Center (SOC) roles, focusing on threat detection and response. </p> -->
-                        <div class="project-tags">
+     <!--                    <div class="project-tags">
                             <span class="project-tag">SOC operations</span>
                             <span class="project-tag">threat analysis</span>
                             <span class="project-tag">incident response</span>
                         </div>
                         <!-- <button class="btn">View Research</button> -->
-                    </div>
+            <!--         </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </section>
     
@@ -533,9 +533,10 @@ These flaws are dangerous because stolen credentials or modified files let attac
                 <div class="logo">PORT<span>folio</span></div>
                 <div class="social-links">
                         <!-- Social Media Links -->
-                       <!--  <a href="https://www.facebook.com" class="social-link" target="_blank">
-                        <i class="fab fa-facebook-f"></i>
-                        </a> -->
+                        <a href="https://github.com" class="social-link" target="_blank">
+                        <i class="fab fa-github"></i>
+                        </a>
+
                         <a href="https://linkedin.com/in/kareem-omran" class="social-link" target="_blank" rel="noopener noreferrer">               
                         <i class="fab fa-linkedin-in"></i>
                         </a>
