--- a/index.html
+++ b/index.html
@@ -233,19 +233,19 @@
                 </div>
 
 
-                <div class="project-card">
+             <!--    <div class="project-card">
                     <div class="project-img"><img src="./cisco_two.jpg" alt=""></div>
                     <div class="project-content">
                         <h3>CCNA7: Introduction to Network</h3>
                         <!-- <p>A course covering the basics of computer networks, including protocols, topologies, and data transmission principles</p> -->
-                        <div class="project-tags">
+                  <!--       <div class="project-tags">
                             <span class="project-tag"> Network Configuration</span>
                             <span class="project-tag">IPv4/IPv6 Addressing, OSI Model & Protocols Understanding</span>
                             <span class="project-tag">Basic Network Troubleshooting.</span>
                         </div>
                         <!-- <button class="btn">View Report</button> -->
-                    </div>
-                </div>
+          <!--            </div>
+                </div>-->
 
 
                 <div class="project-card">
@@ -406,9 +406,9 @@
             <!-- Project 1 -->
             <div class="project-card" 
                  style="background:rgba(255,255,255,0.05); border:1px solid #0ff; border-radius:15px; padding:20px; text-align:center; transition:0.3s;">
-                <h3 style="color:#0ff; margin-bottom:15px;">File  Path Traversal</h3>
-                <p style="font-size:0.95rem; color:#ddd; margin-bottom:20px;">Traversal (directory) vulnerabilities let an attacker read or write arbitrary files on the application server — application code, data, credentials, and OS files — potentially leading to full system compromise.
-These flaws are dangerous because stolen credentials or modified files let attackers escalate privileges, maintain access, and move laterally within the network.</p>
+                <h3 style="color:#0ff; margin-bottom:15px;">DarkwebX OSINT</h3>
+                <p style="font-size:0.95rem; color:#ddd; margin-bottom:20px;">In this project, I conducted a structured Open Source Intelligence (OSINT) investigation into the alias DarkWebX. Using tools such as Sherlock, theHarvester, Google Dorking, and Have I Been Pwned, I gathered and analyzed publicly available data to map the digital footprint of the target.
+I identified linked social media accounts, explored potential associated emails, checked for data breaches, and attempted to trace IP addresses through public logs. Findings were documented in a professional OSINT report that included methodology, evidence, and a final conclusion.</p>
                 <a href="/msf_Task.pdf" target="_blank" 
                    style="display:inline-block; padding:10px 20px; background:#0ff; color:#000; border-radius:30px; text-decoration:none; font-weight:bold;">
                    📄 View PDF
@@ -533,7 +533,7 @@ These flaws are dangerous because stolen credentials or modified files let attac
                 <div class="logo">PORT<span>folio</span></div>
                 <div class="social-links">
                         <!-- Social Media Links -->
-                        <a href="https://github.com" class="social-link" target="_blank">
+                        <a href="https://github.com/kareem-omran02" class="social-link" target="_blank">
                         <i class="fab fa-github"></i>
                         </a>
 
