--- a/index.html
+++ b/index.html
@@ -407,9 +407,9 @@
             <div class="project-card" 
                  style="background:rgba(255,255,255,0.05); border:1px solid #0ff; border-radius:15px; padding:20px; text-align:center; transition:0.3s;">
                 <h3 style="color:#0ff; margin-bottom:15px;">DarkwebX OSINT</h3>
-                <p style="font-size:0.95rem; color:#ddd; margin-bottom:20px;">In this project, I conducted a structured Open Source Intelligence (OSINT) investigation into the alias DarkWebX. Using tools such as Sherlock, theHarvester, Google Dorking, and Have I Been Pwned, I gathered and analyzed publicly available data to map the digital footprint of the target.
-I identified linked social media accounts, explored potential associated emails, checked for data breaches, and attempted to trace IP addresses through public logs. Findings were documented in a professional OSINT report that included methodology, evidence, and a final conclusion.</p>
-                <a href="/msf_Task.pdf" target="_blank" 
+                <p style="font-size:0.95rem; color:#ddd; margin-bottom:20px;">Conducted an ethical OSINT investigation into the alias DarkWebX using tools like Sherlock, theHarvester, and Google Dorking. 
+                    Identified social media profiles, searched for associated emails, checked breach data, and documented results in a professional report. This project demonstrates skills in cyber threat hunting, digital forensics, and structured reporting.</p>
+                <a href="./OSINT Investigation Report - Copy.pdf" target="_blank" 
                    style="display:inline-block; padding:10px 20px; background:#0ff; color:#000; border-radius:30px; text-decoration:none; font-weight:bold;">
                    📄 View PDF
                 </a>
